Custom Domain added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swasthioil-official-website",
-  "homepage": "https://techdev-swasthioil.github.io/swasthioil-official-website",
+  "homepage": "https://swasthioil.in",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
