--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,26 +1,48 @@
----
-name: Build and Deploy React App to Github Pages
+# ---
+# name: Build and Deploy React App to Github Pages
+# on:
+#   push:
+#     branches: [ main ]
+# jobs:
+#   build-and-deploy:
+#     name: Build and Deploy
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v2
+
+#     - name: Build
+#       run: npm install
+
+#     - name: Test
+#       run: npm run test
+
+#     - name: Deploy
+#       run: | 
+#         git config --global user.name ''
+#         git config --global user.email ''
+#         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+#         npm run deploy
+name: Deploy
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
-  build-and-deploy:
-    name: Build and Deploy
+  deploy:
     runs-on: ubuntu-latest
-
+    env:
+      node-version: 16.x
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Build
-      run: npm install
-
-    - name: Test
-      run: npm run test
-
-    - name: Deploy
-      run: | 
-        git config --global user.name ''
-        git config --global user.email ''
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        npm run deploy
+      - uses: actions/checkout@v2.0.0
+      - name: Use Node.js ${{ env.node-version }}
+        uses: actions/setup-node@v3 with:
+          node-version: ${{ env.node-version }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Deploy
+        run: npm run deploy
