--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Deploy
       run: | 
-        git config --global user.name ''
-        git config --global user.email ''
+        git config --global user.name 'Shashank P R'
+        git config --global user.email '141545768+techdev-swasthioil@users.noreply.github.com'
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         npm run deploy
