--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.15.0",
